Correct throws javadoc